--- a/index.css
+++ b/index.css
@@ -14,6 +14,10 @@ body {
   padding-top: 10px;
 }
 
+.header {
+  padding-bottom: 20px;
+}
+
 .wrapper {
   display: flex;
   flex-direction: column;
